@@ -1,3 +1,5 @@
+- Fix Client.destroyResources
+
 * Thu Mar 03 2016 - version 0.5.2
 - No changes
 
